# pydantic-neuroglancer

./: README.md  generate_url.py  pyproject.toml
schemas/: ViewerState.schema.json
src/neuroglancer_json_schemas/: url_state.py  viewer_state.py
src/pydantic_neuroglancer/: url_state.py  viewer_state.py
tests/: test_viewer_state.py
