[tool.poetry]
name = "neuroglancer-json-schemas"
version = "0.1.0"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "BSD 3-clause"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
